# substrate-node-template

node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
