[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
node-template-runtime = { path = '../runtime', version = '2.0.0' }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "rococo-branch" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "rococo-branch" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sc-cli = { git = "https://github.com/paritytech/substrate", default-features = false, features = ['wasmtime'], branch = "rococo-branch" }
sc-client-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sc-consensus = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sc-executor = { git = "https://github.com/paritytech/substrate", default-features = false, features = ['wasmtime'], branch = "rococo-branch" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sc-rpc = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false, features = ['wasmtime'], branch = "rococo-branch" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-consensus = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
